# calendar-splitter

./: .coverage  .gitignore  README.md  dev-requirements.txt  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  generate-feeds.yml
_feeds/: upstream_state.json
calendar_splitter/: __init__.py  __main__.py  cli.py  exceptions.py  fetch.py  logging.py  pipeline.py  readme.py  tokens.py
calendar_splitter/config/: __init__.py
calendar_splitter/core/: __init__.py  models.py  parser.py  rewriter.py  writer.py
calendar_splitter/strategies/: __init__.py
docs/: models.md
docs/feeds/: DH2642--2410ebf036a44c8f.ics  EN2720--5f885680a3b74904.ics  IS1200--5dd6187aabb24424.ics  IV1351--6ec8325c89524db9.ics  IX1303--66c98c87aa834793.ics
events/: IS1200.json
legacy/: README.md  mypy.ini
legacy/scripts/: fetch.py  log_sanitize.py  main.py  rewrite.py  rules.py  split.py
legacy/tests/: test_log_sanitize.py  test_rewrite.py
scripts/: fetch.py  log_sanitize.py  main.py  rewrite.py  rules.py  split-ics.py  split.py  tokens.py
tests/: conftest.py  test_config.py  test_event_system.py  test_fetch.py  test_logging.py  test_models.py  test_parser.py  test_pipeline.py  test_readme.py  test_rewrite.py  test_rewriter.py  test_rules.py  test_split.py  test_strategies.py  test_tokens.py  test_writer.py
